
find_package(Git QUIET)

set(LAUNCHER_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
#set(LAUNCHER_BINARY_DIR "${PROJECT_BINARY_DIR}")
set(LAUNCHER_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}")
set(GIT_SOURCE_DIR "${MOLLY_SOURCE_DIR}")
set(LAUNCHER_MOLLY TRUE)
set(LAUNCHER_PREFIX "molly_")

include(GetGitRevisionDescription)
get_git_head_revision(GIT_REFSPEC GIT_SHA1 GITDIR ${MOLLY_SOURCE_DIR})


get_property(MOLLYCC_EXECUTABLE TARGET mollycc PROPERTY LOCATION)


configure_file(${LAUNCHER_SOURCE_DIR}/submit.py.cmake ${LAUNCHER_BINARY_DIR}/submit.py)
file(COPY "${LAUNCHER_BINARY_DIR}/submit.py" DESTINATION "${PROJECT_BINARY_DIR}/bin/"
  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

configure_file(${LAUNCHER_SOURCE_DIR}/launcher.py.cmake ${LAUNCHER_BINARY_DIR}/launcher.py)
file(COPY "${LAUNCHER_BINARY_DIR}/launcher.py" DESTINATION "${PROJECT_BINARY_DIR}/bin/"
  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

# Dummy target that just reruns cmake if necessary
add_custom_target(buildsystemupdate)
